fix: CurrentUser, Supplier dependencies, build
- Optimezed query for get current user info
- Fixed Supplier dependencies
- Fixed errors of gradle building
- Fast fix (patch) of DayMenuControllerTest
- Applied spotless format